2010-12-15 John Wu <John dot Wu at ACM dot org>
	* src/ibin.h, src/ibin.cpp: add one more bitmap to
	ibis::bin::granule to produce three bins for each target (instead
	of two), in template function scanAndPartition add a case for
	working with simpler binning strategy
	* tests/test1.csv: change the last two columns to be 1 and 0
	exclusively to produce new test cases
	* tests/scripts/query-count.list: update queries and counts to
	accommodate the new test data

2010-12-14 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: rearrange the call to ibis::init so that it
	reads the last configuration file from the command line (instead
	of attempting to read the default configuration file)

2010-12-13 John Wu <John dot Wu at ACM dot org>
	* src/meshQuery.cpp, src/meshQuery.h: add functions afind, aset,
	label2DSimple and label3Dsimple to handle connected component
	labeling

2010-12-10 John Wu <John dot Wu at ACM dot org>
	* win/ibis.sln, win/*.vcproj: remove the definition of WINVER and
	remove the X64 platform specifications (the X64 platform causes
	visual studio express to complain about the project files), remove
	some unused items from the .vcproj files

2010-12-09 John Wu <John dot Wu at ACM dot org>
	* examples/ardea.cpp: add call to ibis::init before calling
	parse_args (i.e., before possibly doing anything with the FastBit
	functions)

2010-12-08 John Wu <John dot Wu at ACM dot org>
	* tests/jrf.cpp: to generate random data based on 20-entry Risk
	Category from Justo Ruiz Ferrer <justo.ruizferrer@endelec.com>
	* tests/scripts/jrf-ckeck.pl, tests/Makefile.am: add tests for
	keyword index based on test data generated by jrf.cpp
	* src/column.cpp: dataFileName neglected to handle the case where
	there are directory separators in the incoming argument dir
	* tests/scripts/jrf-check.pl: change from dos style line break to
	unix style line break to get the tests to run on a linux machine
	* tests/setqgen.cpp:149 generate the file names with subdirectory