@@ -1,3 +1,7 @@
+2010-12-16 John Wu <John dot Wu at ACM dot org>
+	* src/meshQuery.cpp: implement meshQuery::labelNDSimple and use it
+	to debug label3DSimple
+
 2010-12-15 John Wu <John dot Wu at ACM dot org>
 	* src/ibin.h, src/ibin.cpp: add one more bitmap to
 	ibis::bin::granule to produce three bins for each target (instead
